test/expected/unicode_error_offset.out
[CompoundList]
  [CompoundListCondition, None]
    [SimpleCommand "echo" "юникод"]
  [CompoundListCondition, None]
    [SimpleCommand "does_not_exist*"]
[Word
  Unquoted "echo"
]
[Word
  Unquoted "юникод"
]
[Word
  Unquoted "does_not_exist*"
]
юникод
shit: 2:14: error: the glob pattern 'does_not_exist*' matched no file, it expands to its literal text, which is rarely intended. Probe for matches with compgen -G 'does_not_exist*' or relax with set +o failglob.
     2 |  echo юникод; does_not_exist*
       |               ^~~~~~~~~~~~~~~ here.
